testing gha build

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,7 @@ name: BUILDPackage
 # -------- DEBUGGING --------
 on: 
   push:
-    branches: ['dev']
+    branches: ['dev', 'smk-cdci']
 
 
 # on:
