--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -68,6 +68,8 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+      with:
+        buildkitd-flags: --debug
 
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
