--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,9 @@ jobs:
 
     - name: calculateImageTag
       id: calculateImageTag
-      run: echo ::set-output name=DOCKER_VERSION_TAG::$(date +%Y%m%d-%H%M)
+      run: |
+        echo ::set-output name=DOCKER_VERSION_TAG::$(date +%Y%m%d-%H%M)
+        echo logged in as ${{ github.repository_owner }}
 
     # --------- GET THE ISSUE URL AND CACHE IT -------
     # - name: output the docker image tag, issue url and the event path
@@ -73,10 +75,12 @@ jobs:
 
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
+      #users: ghcr.io
       with:
-        registry: docker.pkg.github.com
+        #registry: docker.pkg.github.com
+        registry: ghcr.io
         username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.GHCR_TOKEN }}
 
     - name: Build and push
       id: docker_build
