--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -87,17 +87,20 @@ jobs:
     - name: Build and push
       id: docker_build
       uses: docker/build-push-action@v2
-      if: "startsWith(github.ref, 'refs/tags/v')"
+      #if: "startsWith(github.ref, 'refs/tags/v')"
       with:
         push: true
         #tags: bcgov/smk-fap-fcb:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
         builder: ${{ steps.buildx.outputs.name }}
-        context: .
-        file: ./docker/image/app/Dockerfile
-        tags: ${{ steps.calculateImageTag.outputs.tags }}
-        platforms: linux/amd64,linux/arm64,linux/386
-        secrets: |
-            GIT_AUTH_TOKEN=${{ secrets.GHCR_TOKEN }}
+        context: ./${{ github.workflow }}/
+        file: ./${{ github.workflow }}/Dockerfile
+        tags: |
+          ghcr.io/${{ github.repository_owner }}/${{ github.workflow }}:latest
+          ghcr.io/${{ github.repository_owner }}/${{ github.workflow }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
+        #tags: ${{ steps.calculateImageTag.outputs.tags }}
+        #platforms: linux/amd64,linux/arm64,linux/386
+        #secrets: |
+        #    GIT_AUTH_TOKEN=${{ secrets.GHCR_TOKEN }}
         # build-args: |
         #   arg1=value1
         #   arg2=value2
