--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -77,10 +77,9 @@ jobs:
 
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
-      #users: ghcr.io
       with:
-        #registry: docker.pkg.github.com
-        registry: ghcr.io
+        registry: docker.pkg.github.com
+        #registry: ghcr.io
         username: ${{ secrets.GHCR_USER }}
         password: ${{ secrets.GHCR_TOKEN }}
 
@@ -95,8 +94,13 @@ jobs:
         #context: ./${{ github.workflow }}/
         #file: ./${{ github.workflow }}/Dockerfile
         tags: |
-          ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
-          ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
+          docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository }}:latest
+          docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
+        
+        #  ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
+        #  ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
+        
+        
         #tags: ${{ steps.calculateImageTag.outputs.tags }}
         #platforms: linux/amd64,linux/arm64,linux/386
         #secrets: |
