build-push-action@v2 debugging

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -95,7 +95,8 @@ jobs:
         #file: ./${{ github.workflow }}/Dockerfile
         tags: |
           docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository }}:latest
-          docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
+          
+        # docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
         
         #  ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
         #  ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
