--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,7 @@ jobs:
       run: |
         echo ::set-output name=DOCKER_VERSION_TAG::$(date +%Y%m%d-%H%M)
         echo ::set-output name=tags::docker.pkg.github.com/${{github.repository_owner}}/${{github.repository}}:${GITHUB_REF#refs/tags/v}
-        IMAGE="${REGISTRY}/${{ github.repository }}/${{ github.event.repository.name }}
+        IMAGE="${REGISTRY}/${{ github.repository }}/${{ github.event.repository.name }}"
         TAGS="${IMAGE}:latest"
         echo ::set-output name=tags2::${TAGS}
 
