--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -94,7 +94,7 @@ jobs:
       uses: docker/build-push-action@v2
       #if: "startsWith(github.ref, 'refs/tags/v')"
       with:
-        push: true
+        #push: true
         context: .
         file: ./Dockerfile
         #tags: bcgov/smk-fap-fcb:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
@@ -105,7 +105,13 @@ jobs:
         # docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
         #  ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
         #  ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
-        
+    - name: Import image in containerd
+      run: |
+        sudo ctr i import --base-name docker.pkg.github.com/bcgov/smk-fap-fcb --digests --all-platforms /tmp/image.tar
+
+    - name: Push image with containerd
+      run: |
+        sudo ctr --debug i push --user "${{ secrets.GHCR_USER }}:${{ secrets.GHCR_TOKEN }}" docker.pkg.github.com/bcgov/smk-fap-fcb:latest
    
 
 
