different gh cr path

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -112,7 +112,7 @@ jobs:
 
     - name: Push image with containerd
       run: |
-        sudo ctr --debug i push --user "${{ secrets.GHCR_USER }}:${{ secrets.GHCR_TOKEN }}" docker.pkg.github.com/bcgov/smk-fap-fcb:latest
+        sudo ctr --debug i push --user "${{ secrets.GHCR_USER }}:${{ secrets.GHCR_TOKEN }}" docker.pkg.github.com/bcgov/smk-fap-fcb/smk-fap-fcb:latest
    
 
 
