--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -83,7 +83,7 @@ jobs:
 
     - name: Set up containerd
       uses: crazy-max/ghaction-setup-containerd@v1
-      
+
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
       with:
@@ -111,7 +111,7 @@ jobs:
         #  ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
     - name: Import image in containerd
       run: |
-        sudo ctr i import --base-name docker.pkg.github.com/bcgov/smk-fap-fcb --digests --all-platforms /tmp/image.tar
+        sudo ctr i import --base-name docker.pkg.github.com/bcgov/smk-fap-fcb/smk-fap-fcb --digests --all-platforms /tmp/image.tar
 
     - name: Push image with containerd
       run: |
