--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -98,9 +98,9 @@ jobs:
       #if: "startsWith(github.ref, 'refs/tags/v')"
       with:
         #push: true
-        context: .
+        #context: .
         outputs: type=oci,dest=/tmp/image.tar
-        file: ./Dockerfile
+        #file: ./Dockerfile
         #tags: bcgov/smk-fap-fcb:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
         #builder: ${{ steps.buildx.outputs.name }}
         tags: bcgov/smk-fap-fcb:latest
