--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -98,8 +98,8 @@ jobs:
       #if: "startsWith(github.ref, 'refs/tags/v')"
       with:
         #push: true
-        #context: .
-        outputs: type=oci,dest=/tmp/image.tar
+        context: .
+        #outputs: type=oci,dest=/tmp/image.tar
         #file: ./Dockerfile
         #tags: bcgov/smk-fap-fcb:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
         #builder: ${{ steps.buildx.outputs.name }}
@@ -112,9 +112,11 @@ jobs:
         #  ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
     - name: Import image in containerd
       run: |
-        sudo ctr i import --base-name docker.pkg.github.com/bcgov/smk-fap-fcb/smk-fap-fcb --digests --all-platforms /tmp/image.tar
         docker images
         docker push bcgov/smk-fap-fcb:latest
+
+      # sudo ctr i import --base-name docker.pkg.github.com/bcgov/smk-fap-fcb/smk-fap-fcb --digests --all-platforms /tmp/image.tar
+
 
     - name: Push image with containerd
       run: |
