--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,16 +36,19 @@ jobs:
     - name: calculateImageTag
       id: calculateImageTag
       run: |
-        echo ::set-output name=DOCKER_VERSION_TAG::$(date +%Y%m%d-%H%M)
-        echo ::set-output name=tags::docker.pkg.github.com/${{github.repository_owner}}/${{github.repository}}:${GITHUB_REF#refs/tags/v}
-        REGISTRY="docker.pkg.github.com"
-        IMAGE="${REGISTRY}/${{ github.repository }}/${{ github.event.repository.name }}"
-        TAGS="${IMAGE}:latest"
-        echo ::set-output name=tags2::${TAGS}
+        # echo ::set-output name=DOCKER_VERSION_TAG::$(date +%Y%m%d-%H%M)
+        # echo ::set-output name=tags::docker.pkg.github.com/${{github.repository_owner}}/${{github.repository}}:${GITHUB_REF#refs/tags/v}
+        
+        echo ::set-output DOCKER_VERSION_TAG=docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository }}/${{ github.repository }}:${{ DOCKER_VERSION_TAG }}
+        echo tag is ${{ DOCKER_VERSION_TAG }}
+        
+        # REGISTRY="docker.pkg.github.com"
+        # IMAGE="${REGISTRY}/${{ github.repository }}/${{ github.event.repository.name }}"
+        # TAGS="${IMAGE}:latest"
+        # echo ::set-output name=tags2::${TAGS}
 
         #echo ::set-output name=tags2::docker.pkg.github.com/${{github.repository_owner}}/${{github.repository}}:${GITHUB_REF#refs/tags/v}
-        echo logged in as ${{ secrets.GHCR_USER }}
-
+        #echo logged in as ${{ secrets.GHCR_USER }}
 
     # --------- GET THE ISSUE URL AND CACHE IT -------
     # - name: output the docker image tag, issue url and the event path
@@ -87,42 +90,34 @@ jobs:
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
       with:
-        registry: docker.pkg.github.com
         #registry: ghcr.io
+        registry: docker.pkg.github.com
         username: ${{ secrets.GHCR_USER }}
         password: ${{ secrets.GHCR_TOKEN }}
 
     - name: Build and push
       id: docker_build
       uses: docker/build-push-action@v2
-      #if: "startsWith(github.ref, 'refs/tags/v')"
       with:
-        #push: true
         context: .
         #outputs: type=oci,dest=/tmp/image.tar
         #file: ./Dockerfile
         #tags: bcgov/smk-fap-fcb:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
         #builder: ${{ steps.buildx.outputs.name }}
-        tags: docker.pkg.github.com/bcgov/smk-fap-fcb/smk-fap-fcb:latest
+        # tags: docker.pkg.github.com/bcgov/smk-fap-fcb/smk-fap-fcb:latest
+        tags: ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
         load: true
         #tags: ${{ steps.calculateImageTag.outputs.tags2 }}
         #  docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository }}:latest
         # docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
         #  ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
         #  ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
-    - name: Import image in containerd
+    - name: Push to Github Packages
       run: |
-        docker images
-        docker push docker.pkg.github.com/bcgov/smk-fap-fcb/smk-fap-fcb:latest
-
-      # sudo ctr i import --base-name docker.pkg.github.com/bcgov/smk-fap-fcb/smk-fap-fcb --digests --all-platforms /tmp/image.tar
+        docker push ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
 
 
-    - name: Push image with containerd
-      run: |
-        docker images
-        sudo ctr images list
-        sudo ctr --debug i push --user "${{ secrets.GHCR_USER }}:${{ secrets.GHCR_TOKEN }}" docker.pkg.github.com/bcgov/smk-fap-fcb/smk-fap-fcb:latest
+
    
 
 
