--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -91,8 +91,10 @@ jobs:
       with:
         buildkitd-flags: --debug
 
-    - name: Set up containerd
-      uses: crazy-max/ghaction-setup-containerd@v1
+    - uses: actions/delete-package-versions@v1
+      with:
+        package-version-ids: 'MDE0OlBhY2thZ2VWZXJzaW9uOTcyMDY3'
+        token: ${{ secrets.GITHUB_PAT }}
 
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
@@ -115,7 +117,7 @@ jobs:
         tags: |
           ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
           ${{ steps.calculateImageTag.outputs.DOCKER_LATEST_TAG }}
-          
+
         #tags: ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
         load: true
         #tags: ${{ steps.calculateImageTag.outputs.tags2 }}
