--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -91,10 +91,10 @@ jobs:
       with:
         buildkitd-flags: --debug
 
-    - uses: actions/delete-package-versions@v1
-      with:
-        package-version-ids: 'MDE0OlBhY2thZ2VWZXJzaW9uOTcyMDY3'
-        token: ${{ secrets.GITHUB_PAT }}
+    # - uses: actions/delete-package-versions@v1
+    #   with:
+    #     package-version-ids: 'MDE0OlBhY2thZ2VWZXJzaW9uOTcyMDY3'
+    #     token: ${{ secrets.GITHUB_PAT }}
 
     - name: Login to GitHub Packages Docker Registry
       uses: docker/login-action@v1
