--- a/helm-charts/values.yaml
+++ b/helm-charts/values.yaml
@@ -2,83 +2,6 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
-
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
-podAnnotations: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 80
-
-ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths: []
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
-
-
 # should get overridden with the specific smk app name
 app_name: smkapp
 
@@ -86,10 +9,11 @@ app_name: smkapp
 web_role: web
 env: dev
 
+app_port: 8888
 
-app_port: 6666
-
-
+# Values that should be overriden:
+#  email, username, password, registry, imagetag
+# these are my passwords, please don't share
 app_image_pull_secret_params:
   name: image-pull-secrets
   email: guy.lafleur@montreal.canadians.ca
@@ -97,3 +21,14 @@ app_image_pull_secret_params:
   password: b05t0NSuuuuuxx999342
   registry: docker.pkg.github.com/bcgov/smk-fc-fap/smk-fc-fap
   imagetag: latest
+
+kong_config:
+  name: name-of-kong-config-service-account
+  apikey: api-key-that-goes-with-the-service-account
+
+
+github_actions_sa:
+  name: gha_sa
+
+deploy_service_account: true
+
