--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,9 @@ jobs:
     name: Build BCDC-SMK container image
     # The type of runner that the job will run on
     runs-on: ubuntu-18.04
+    env:
+      OPENSHIFT_SERVER_URL: ${{secrets.OPENSHIFT_SERVER_URL}}
+      OPENSHIFT_TOKEN_DEV: ${{secrets.OPENSHIFT_TOKEN_DEV}}
     outputs:
       dockerversiontag: ${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
     steps:
@@ -46,9 +49,9 @@ jobs:
     - name: OpenShift Action
       id: GHAOpenshiftTest
       uses: redhat-developer/openshift-actions@v1.1
-      env: 
-         OPENSHIFT_SERVER_URL=${{ secrets.OPENSHIFT_SERVER_URL }}
-         OPENSHIFT_TOKEN_DEV=${{ secrets.OPENSHIFT_TOKEN_DEV }}
+      # env: 
+      #    OPENSHIFT_SERVER_URL=${{ secrets.OPENSHIFT_SERVER_URL }}
+      #    OPENSHIFT_TOKEN_DEV=${{ secrets.OPENSHIFT_TOKEN_DEV }}
       if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null
       with:
         version: '3.11.232'
