--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,10 +61,11 @@ jobs:
       if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null
       run:
         CONFMAP_NAME=imagetag2deploy
+        IMAGETAG=${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
         CONF_EXISTS=$(oc get configmaps -o json |  jq '[.items[] | select(.metadata.name == "'$CONFMAP_NAME'")] | length')
         echo conf exists is $CONF_EXISTS
+        echo imagetag is $IMAGETAG
         
-        echo ---if config map exists then replace, otherwise create---
         if [ $CONF_EXISTS -eq 0 ] 
           then
             methodType="create"
