--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -60,8 +60,9 @@ jobs:
       id: cacheImageTag
       if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null
       run:
-        CONFMAP_NAME=imagetag2deploy
+        oc --help
         IMAGETAG=${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
+        CONFMAP_NAME=imagetag2deploy
         CONF_EXISTS=$(oc get configmaps -o json |  jq '[.items[] | select(.metadata.name == "'$CONFMAP_NAME'")] | length')
         echo conf exists is $CONF_EXISTS
         echo imagetag is $IMAGETAG
