--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -140,7 +140,7 @@ jobs:
     # -------- Update the issue --------
     - name: Tag the pull request with build tag
       id: tagpullrequest
-      #if: env.GITHUB_EVENT_NAME != pull_request
+      if: env.GITHUB_EVENT_NAME == pull_request
       run: |
         DOCKER_VERSION_TAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
 
