--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -47,7 +47,7 @@ jobs:
       # RETRIEVE THE IMAGE TAG and the ISSUE
     - name: Retrieve image tag
       id: retrieveimagetag
-      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && env.GHCR_USER != null and env.GHCR_TOKEN != null
+      if: env.OPENSHIFT_SERVER_URL != null &&  env.OPENSHIFT_TOKEN_DEV != null && env.GHCR_USER != null && env.GHCR_TOKEN != null
       run: |
         CONFMAP_NAME=imagetag2deploy
         CONFMAPIMAGETAG=current_image_tag
