--- a/helm-charts/values.yaml
+++ b/helm-charts/values.yaml
@@ -1,6 +1,22 @@
 # Default values for helm-charts.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+service:
+  type: ClusterIP
+  port: 80
+
+ingress:
+  enabled: false
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
+      paths: []
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 # should get overridden with the specific smk app name
 app_name: smkapp
@@ -28,7 +44,20 @@ kong_config:
 
 
 github_actions_sa:
-  name: gha_sa
+  name: gha-sa
 
 deploy_service_account: true
+
+# Used to ensure the correct namespace has been set by gha
+namespaces_configmap:
+  name: namespaces-cm
+  dev: name_of_dev_namespace
+  test: name_of_test_namespace
+  prod: name_of_prod_namespace
+
+# Used by gha to pass the issue url to different gha jobs / stages
+github_issues_configmap:
+  name: github-issues-configmap
+  issue_url: None
+  github_event_path: None
 
